# xWindow

./: .clang-format  .gitignore  CMakeLists.txt
CMake/: DetectWindowingSystem.cmake
Demo/: CMakeLists.txt  main.cpp
Include/xWindow/: Events.hpp  NativeWindow.hpp  Window.hpp
Include/xWindow/Platform/: WaylandWindow.hpp  Win32Window.hpp  X11Window.hpp
Shared/: EventSystem.hpp  Expect.hpp  IO.hpp  Panic.hpp  Types.hpp
Source/: Window.cpp
Source/Platform/: WaylandWindow.cpp  Win32Window.cpp  X11Window.cpp
